Fix Spacing on Social Icons
Social icons were not wrapping on very small screens. While this was probably not an actual problem, using better Flexbox rules actually made this better. It now wraps and doesn't have static gaps that offset the second row.

--- a/sass/blocks/_profile.scss
+++ b/sass/blocks/_profile.scss
@@ -141,6 +141,9 @@
 				// Make the list horizontal and add margin at the bottom.
 				list-style-type: none;
 				display: flex;
+				flex-wrap: wrap;
+				column-gap: $uds-size-spacing-2;
+				row-gap: $uds-size-spacing-1;
 				padding-left: 0;
 				margin-bottom: 0;
 
@@ -151,11 +154,6 @@
 						color: #191919;
 						font-size: 1.75rem;
 					}
-				}
-
-				li + li {
-					// Add left margin to any <li> following another <li>.
-					margin-left: $uds-component-heading-three-font-size;
 				}
 			}
 		}
